--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,26 @@
 spring.application.name=springboot
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+server.port=8081
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # JPA/Hibernate Configuration
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=none
 
-server.port=8081
+#localhost
+spring.datasource.url=${DATABASE_URL}
+#jdbc:mysql://localhost:3306/springboot
+spring.datasource.password=${DATABASE_PASSWORD}
+#password
+app.url=${APP_URL}
+
+#remote
+#mysql://root:aIOqMjmloAgCIYIxKNUDLuQlqGAWyfjV@junction.proxy.rlwy.net:40756/railway
+#spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:40756/railway
+#spring.datasource.password=aIOqMjmloAgCIYIxKNUDLuQlqGAWyfjV
+
+#mysql://root:aIOqMjmloAgCIYIxKNUDLuQlqGAWyfjV@junction.proxy.rlwy.net:40756/railway
+
