--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,11 @@ spring.jpa.hibernate.ddl-auto=update
 #localhost
 spring.datasource.url=${DATABASE_URL}
 #jdbc:mysql://localhost:3306/springboot
+#jdbc:mysql://junction.proxy.rlwy.net:40756/railway
+
 spring.datasource.password=${DATABASE_PASSWORD}
 #password
+#aIOqMjmloAgCIYIxKNUDLuQlqGAWyfjV
 app.url=${APP_URL}
 
 #remote
